--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.15.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "platform": "^1.3.6",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-progressbar": "^0.7.5",
